# rust_northwind

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
